Working version for Australia
Working version with threading, for Australian locations. Only pulls from A-K for some reason, but key functionality is there. Next step is to work out what locations we need from the G API instead of grabbing everything - this will make the data much more manageable.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__/weather_api.cpython-37.pyc
 __pycache__/secret.cpython-37.pyc
 __pycache__/main.cpython-37.pyc
 __pycache__/get_cities.cpython-37.pyc
+total_cities.csv
+.vscode/launch.json
+climate_data.csv
